# nvMolKit

./: .gitignore  CMakeLists.txt
.github/workflows/: conda-build.yml  lint.yml
admin/: include_check.py  run_include_check.sh
admin/distribute/: repair_wheel.sh
benchmarks/: RECURSIVE_SMARTS_BUG_REPORT.md  benchmark_utils.cpp  bit_vector.cpp  butina_clustering_bench.py  conformer_rmsd_bench.py  cross_similarity_bench.py  eigen_solver_bench.cu  etkdg_bench.py  etkdg_embed_bench.cpp  etkdg_ff_bench.cpp  ff_optimize_bench.py  mmff_multimol_bench.cpp  mmff_optimize_bench.cpp  morgan_fp.cpp  recursive_smarts_repro.py  substruct_bench.py  tfd_bench.py  updateInverseHessianBench.cu
benchmarks/bench_utils/: __init__.py  timing.py
benchmarks/tests/: conftest.py  test_timing.py
cmake/: boost.cmake  rdkit.cmake
docs/: agent_skill.html  autotune.html  changelog.html  forcefield.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  similarity.html
docs/_sources/: agent_skill.rst.txt  autotune.rst.txt  changelog.md.txt  forcefield.rst.txt  index.rst.txt
docs/api/: nvmolkit.html
examples/tutorials/: 01_morgan_fingerprints_cpu_vs_gpu.ipynb  04_mmff_optimization_cpu_vs_gpu.ipynb  (+8 more)
nvmolkit/: CMakeLists.txt  DataStructs.cpp  array_helpers.cpp  array_helpers.h  batchedForcefield.cpp  clustering.cpp  conformerRmsd.cpp  device_result_python.h  embedMolecules.cpp  fingerprints.cpp  mmffOptimization.cpp  mmff_python_utils.h  substructure.cpp  tfd.cpp  uffOptimization.cpp
nvmolkit/autotune/: _core.py  _ff_common.py  tune_embed_molecules.py  tune_substructure.py
nvmolkit/tests/: test_autotune.py
rdkit_extensions/: CMakeLists.txt  bounds_matrix.cpp  conformer_pruning.cpp  dist_geom_flattened_builder.cpp  dist_geom_flattened_builder.h  mmff_builder.cpp  mmff_contribs.cpp  mmff_contribs.h  mmff_flattened_builder.cpp  mmff_flattened_builder.h  mmff_optimize.h  uff_flattened_builder.cpp  uff_flattened_builder.h
src/: CMakeLists.txt  butina.cu  butina.h  conformer_rmsd.cu  conformer_rmsd.h  conformer_rmsd_mol.cpp  conformer_rmsd_mol.h  embedder_utils.cpp  etkdg.cpp  etkdg.h  etkdg_impl.cpp  etkdg_impl.h  etkdg_kernels.cu  etkdg_stage_coordgen.cu  etkdg_stage_coordgen.h  etkdg_stage_distgeom_minimize.cu  etkdg_stage_distgeom_minimize.h  etkdg_stage_etk_minimization.cu  etkdg_stage_etk_minimization.h  etkdg_stage_stereochem_checks.cu  etkdg_stage_stereochem_checks.h  etkdg_stage_update_conformers.cu  etkdg_stage_update_conformers.h  load_store.cuh  morgan_fingerprint.cpp  morgan_fingerprint.h  morgan_fingerprint_common.cpp  morgan_fingerprint_cpu.cpp  morgan_fingerprint_cpu.h  morgan_fingerprint_gpu.cpp  morgan_fingerprint_gpu.h  morgan_fingerprint_kernels.cu  morgan_fingerprint_kernels.h  similarity.cpp  similarity.h  similarity_kernels.cu  similarity_kernels.h  similarity_op.cuh  symmetric_eigensolver.cu  triangle_smooth.cu  (+2 more)
src/conformer/: CMakeLists.txt  device_coord_collector.cpp  device_coord_collector.h  device_coord_result.h  etkdg_device_collect.cu  etkdg_device_collect.h  ff_device_collect.cpp  ff_device_collect.h
src/data_structures/: CMakeLists.txt
src/forcefields/: CMakeLists.txt  batched_forcefield.cpp  batched_forcefield.h  coord_gen.cu  dg_batched_forcefield.cu  dg_batched_forcefield.h  dist_geom.cu  dist_geom.h  dist_geom_kernels.cu  dist_geom_kernels_device.cuh  etk_batched_forcefield.cu  etk_batched_forcefield.h  ff_utils.cpp  forcefield_constraints.cpp  forcefield_constraints.h  kernel_utils.cu  kernel_utils.cuh  mmff.cu  mmff.h  mmff_batched_forcefield.cu  mmff_batched_forcefield.h  mmff_kernels.cu  mmff_kernels_device.cuh  uff.cu  uff.h  uff_batched_forcefield.cu  uff_batched_forcefield.h  uff_kernels.cu  uff_kernels.h  uff_kernels_device.cuh
src/minimizer/: CMakeLists.txt  bfgs_common.cpp  bfgs_common.h  bfgs_hessian.cu  bfgs_hessian.h  bfgs_minimize.cu  bfgs_minimize.h  bfgs_minimize_permol_kernels.cu  bfgs_minimize_permol_kernels.h  bfgs_mmff.cpp  bfgs_mmff.h  bfgs_uff.cpp  bfgs_uff.h
src/substruct/: CMakeLists.txt  boolean_tree.cuh  gpu_executor.cu  gpu_executor.h  graph_labeler.cuh  minibatch_planner.cpp  minibatch_planner.h  molecules.cpp  molecules.h  molecules_device.cuh  packed_bonds.cpp  packed_bonds_device.cuh  pinned_buffer_pool.cpp  pinned_buffer_pool.h  recursive_preprocessor.cu  recursive_preprocessor.h  substruct_algos.cuh  substruct_kernels.cu  substruct_kernels.h  substruct_launch_config.cpp  substruct_search.cu  substruct_search.h  substruct_search_internal.cpp  substruct_search_internal.h  substruct_types.h  thread_worker_context.h
src/testutils/: CMakeLists.txt  conformer_checkers.cpp  mol_data.cpp  substruct_validation.cu  substruct_validation.h
src/tfd/: CMakeLists.txt  tfd_common.cpp  tfd_common.h  tfd_cpu.cpp  tfd_cpu.h  tfd_gpu.cpp  tfd_gpu.h  tfd_kernels.cu  tfd_kernels.h  tfd_transfer.cu
src/utils/: CMakeLists.txt  cuda_error_check.h  device.cpp  device_timings.cuh  device_vector.h  exceptions.cpp  host_vector.h  openmp_helpers.cpp  p2p.cpp  pinned_host_allocator.cpp  pinned_host_allocator.h
tests/: CMakeLists.txt  smarts_filter.cpp  test_bfgs_hessian.cpp  test_bfgs_minimizer.cu  test_boolean_tree.cu  test_butina.cpp  test_conformer_checkers.cpp  test_coordgen.cu  test_cuda_error_check.cpp  test_device.cpp  test_device_timings.cu  test_device_vector.cpp  test_distgeom.cu  test_distgeom_kernels.cu  test_etkdg.cu  test_etkdg_coordgen.cu  test_etkdg_device_output.cu  test_etkdg_etk_minimize.cu  test_etkdg_minimize.cu  test_etkdg_result_tracker.cpp  test_etkdg_stereochem_checks.cu  test_ff_device_output.cu  test_flat_bit_vect.cpp  test_flat_bit_vect_device.cu  test_flattened_builder.cu  test_graph_labeler.cu  test_graph_labeler_recursive.cu  test_host_vector.cu  test_minibatch_planner.cpp  test_mmff.cu  test_molecules.cu  test_morgan_fingerprint.cpp  test_openmp_helpers.cpp  test_p2p.cpp  test_pinned_host_allocator.cpp  test_query.cu  test_rdkit_bounds_matrix.cpp  test_recursive_preprocessor.cu  test_similarity.cpp  test_substruct_algos.cu  (+12 more)
tests/integration/: test_fp_sim_workflow.cpp
(+9 files in other folders)
