# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES.
# All rights reserved. SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

# TFD (Torsion Fingerprint Deviation) CPU implementation
add_library(tfd_cpu tfd_common.cpp tfd_cpu.cpp tfd_transfer.cu)
target_link_libraries(
  tfd_cpu
  PRIVATE ${RDKit_LIBS} OpenMP::OpenMP_CXX openmp_helpers nvtx nvmolkit_versions
  PUBLIC device_vector)

# TFD GPU kernels
add_library(tfd_kernels tfd_kernels.cu)
target_link_libraries(
  tfd_kernels
  PRIVATE cuda_error_check
  PUBLIC device_vector)

# TFD GPU orchestration
add_library(tfd_gpu tfd_gpu.cpp)
target_link_libraries(
  tfd_gpu
  PRIVATE tfd_kernels tfd_cpu ${RDKit_LIBS} nvtx
  PUBLIC device_vector device)
